@@ -47,6 +47,7 @@ libna_core_la_SOURCES = \
 	na-gconf-utils.c									\
 	na-iduplicable.c									\
 	na-idata-factory.c									\
+	na-iexporter.c										\
 	na-iio-factory.c									\
 	na-iio-provider.c									\
 	na-io-factory.c										\
