@@ -1,5 +1,10 @@
 2009-02-15 Pierre Wieser <pwieser@trychlos.org>
 
+	Define NAIExporter interface.
+
+	* src/api/na-iexporter.h:
+	* src/core/na-iexporter.c: New files.
+
 	* src/core/na-dbus-tracker.h: New file.
 
 	Remove useless src/api/na-gconf-keys.h
